# cmake-tutorial

./: .gitignore  CMakeLists.txt  LICENSE  README.md
lib/googletest/: CTestTestfile.cmake
lib/googletest/googlemock/: CTestTestfile.cmake
lib/googletest/googlemock/gtest/: CTestTestfile.cmake
src/: main.cc  math.cc  math.h
test/: math_test.cc
